# foca

./: Cargo.toml  README.md
src/: batch.rs  builder.rs  main.rs  threading.rs
src/aggregator/: README.md  aggregagor_file.rs  aggregator_console.rs  aggregator_executor.rs  aggregator_trait.rs  aggregator_utils.rs  mod.rs
src/common/: README.md  types.rs
src/core/: README.md  batch.rs  builder.rs  executor.rs  mod.rs  threading.rs
src/interface/: README.md  cli.rs  cli_executor.rs  executor_trait.rs  file_executor.rs  mod.rs
static/: json_test.json  output.txt  yaml_test.yaml
