[package]
name = "foca"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.25"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.clap]
version = "4.0.18"
default-features = false
features = ["cargo", "std"]

[dependencies.reqwest]
version = "0.11.12"
default-features = false
